Thu Feb 19 23:12:31 2015  fox

     179* .gitignore
          src/ctw.c
          Make 0xa0 visible - really annoying.

Wed Feb 18 22:42:38 2015  fox

     178* include/ctw.h
          include/ctwP.h
          src/ctw.c
          Add <space>/d/f/p/u support in ctrl-o mode.

Mon Feb 16 22:40:27 2015  fox

     177* include/ctwP.h
          src/ctw.c
          src/usage.c
        Add support for Ctrl-O flushing.

     176* include/ctwP.h
          makefile
          src/ctw.c
          src/term.c
          src/usage.c
          src/usage.txt
          Add dynamic words as per #175.

     175* src/ctw.c
          Add support for undefined/uninitialized and load words
	  from CTW_HIGHLIGHT_WORDFILE.

Thu Sep 11 21:24:57 2014  fox

     174* src/fcterm.c
          src/group.c
          Do synchronous call to XConfigureWindow.

Wed Sep 10 22:54:06 2014  fox

     173* include/fcterm.h
          makefile
          src/fcterm.c
          src/group.c
          Add 'fcterm restore' support.

Mon Sep  1 20:34:31 2014  fox

     172* include/fcterm.h
          src/fcterm.c
          src/term.c
          Fix 'fcterm -ls' not working.

Thu Aug 28 22:28:12 2014  fox

     171* include/fcterm.h
          include/sequence.h
          makefile
          mkseq.sh
          src/ctw.c
          src/fcterm.c
          src/term.c
          Add 'fcterm create-screen'.
	  Allow type in whilst in minimap mode.

Wed Aug 27 08:48:04 2014  fox

     170* include/fcterm.h
          makefile
          src/ctw.c
          src/fcterm.c
          src/group.c
          Launch group_init after fork, not before.

     169* archive.sh
          src/group.c
          Archive: 1.0021

     168* include/ctw.h
          include/ctwP.h
          include/fcterm.h
          include/sequence.h
          machines/linux-x86_64.sh
          makefile
          mkseq.sh
          src/ctw.c
          src/fcterm.c
          src/group.c
          src/term.c