@@ -1,6 +1,6 @@
 #!/bin/sh
 
-CC="gcc  -U_FORTIFY_SOURCE -D_FORTIFY_SOURCE=0 -O2 -g -W -Wall -fno-stack-protector -fno-inline -fno-strict-aliasing"
+CC=${CC:-gcc -U_FORTIFY_SOURCE -D_FORTIFY_SOURCE=0 -O2 -g -W -Wall -fno-stack-protector -fno-inline -fno-strict-aliasing}
 if [ -d /usr/include/freetype2 ]; then
 #	CC="$CC -DHAVE_FREETYPE -I/usr/include/freetype2"
 	CC="$CC -DHAVE_FREETYPE_XFT `freetype-config --cflags`"
@@ -8,7 +8,7 @@ if [ -d /usr/include/freetype2 ]; then
 fi
 CFLAGS="-DCR_LINUX_X86_64 -DCR_LINUX"
 #FT=-lXft
-OBJDIR=bin.$OS_TYPE
+OBJDIR=${OBJDIR:-bin.$OS_TYPE}
 XAW_LINK="$FT -lXaw -lXmu -lXext -lXt -lSM -lICE -lX11 -ldl"
 MOTIF_LINK="-lXm -lXt -lSM -lICE -lX11 -ldl"
 
